--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,26 @@
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-# Datasource
-spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+## H2 
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+## Datasource
+#spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#create, create-drop, validate, update
+#create-drop recreates database everytime - only use in test scenarios
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5433/openpipe
+spring.datasource.username=openpipe
+spring.datasource.password=openpipe
+
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+#This doesn´t work
+#spring.datasource.schema=openpipe
+#This does
+spring.jpa.properties.hibernate.default_schema=openpipe
+spring.datasource.continue-on-error=true
